--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -197,4 +197,8 @@
 
     <!-- Deep Sleep percentage in device info -->
     <string name="status_sleep_time">Deep sleep</string>
+
+    <!-- Hardware info -->
+    <string name="platform_revision">Platform</string>
+    <string name="total_ram">Total RAM</string>
 </resources>
