Settings: Bluetooth timeout feature (2/2)
Change-Id: Ib6f5012a3d2430b2a5f69888ce47d9db5f0e6d51
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -306,4 +306,9 @@
 
     <!-- About phone -->
     <string name="build_description">Description</string>
+
+    <!-- Bluetooth auto timeout -->
+    <string name="bluetooth_timeout">Turn off Bluetooth automatically</string>
+    <string name="bluetooth_timeout_summary">Never</string>
+    <string name="bluetooth_timeout_summary_auto"><xliff:g id="timeout_description">%1$s</xliff:g></string>
 </resources>
