--- a/res/values/extra_config.xml
+++ b/res/values/extra_config.xml
@@ -17,4 +17,19 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Wheter to show device model -->
     <bool name="config_show_device_model">true</bool>
+
+    <!-- Whether to show battery health -->
+    <bool name="config_show_battery_health">false</bool>
+
+    <!-- Define battery design capacity node -->
+    <string name="config_battery_capacity_design"></string>
+
+    <!-- Define battery now capacity node -->
+    <string name="config_battery_capacity_now"></string>
+
+    <!-- Define battery charge cycle node -->
+    <string name="config_battery_charge_cycle"></string>
+
+    <!-- Define Oneplus specific battery health node  -->
+    <string name="config_battery_health_oneplus"></string>
 </resources>
