--- a/res/values/extra_arrays.xml
+++ b/res/values/extra_arrays.xml
@@ -60,4 +60,27 @@
         <item>9</item>
         <item>10</item>
     </string-array>
+
+    <!-- Custom timeout for Hotspot -->
+    <string-array name="wifi_tether_auto_turn_off_entries">
+        <item>@string/custom_timeout_summary_never</item>
+        <item>@string/custom_timeout_summary_1min</item>
+        <item>@string/custom_timeout_summary_2mins</item>
+        <item>@string/custom_timeout_summary_5mins</item>
+        <item>@string/custom_timeout_summary_10mins</item>
+        <item>@string/custom_timeout_summary_30mins</item>
+        <item>@string/custom_timeout_summary_1hour</item>
+        <item>@string/custom_timeout_summary_2hours</item>
+    </string-array>
+
+    <string-array name="wifi_tether_auto_turn_off_values" translatable="false">
+        <item>0</item>
+        <item>60</item>
+        <item>120</item>
+        <item>300</item>
+        <item>600</item>
+        <item>1800</item>
+        <item>3600</item>
+        <item>7200</item>
+    </string-array>
 </resources>
