add Storage Scopes link to the "App info" screen
Change-Id: I9765c4c6be1335c343ece4f0e1e9ed8c19dd6869
Signed-off-by: MSe <mse1969@posteo.de>

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -316,4 +316,8 @@
     <string name="wifi_timeout">Turn off Wi-Fi automatically</string>
     <string name="wifi_timeout_summary">Never</string>
     <string name="wifi_timeout_summary_auto"><xliff:g id="timeout_description">%1$s</xliff:g></string>
+
+    <!-- Storage Scopes -->
+    <string name="storage_scopes">Storage Scopes</string>
+    <string name="storage_scopes_summary">Allow app to access limited files</string>
 </resources>
