Settings: Add support for parallel space
Change-Id: I128c3a2a2798b81242ffc62aa879efbb705dc070
Signed-off-by: LibXZR <i@xzr.moe>
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -280,4 +280,8 @@
     <!-- Hide apps -->
     <string name="hide">Archive</string>
     <string name="unhide">Restore</string>
+
+    <!-- Parallel space -->
+    <string name="laboratory_parallel_space_title">Parallel Space</string>
+    <string name="laboratory_parallel_space_summary">Allow running multiple instances of the same application in parallel</string>
 </resources>
