--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -317,7 +317,9 @@
     <string name="wifi_timeout_summary">Never</string>
     <string name="wifi_timeout_summary_auto"><xliff:g id="timeout_description">%1$s</xliff:g></string>
 
-    <!-- Storage Scopes -->
+    <!-- Contact/Storage Scopes -->
     <string name="storage_scopes">Storage Scopes</string>
     <string name="storage_scopes_summary">Allow app to access limited files</string>
+    <string name="contact_scopes">Contact Scopes</string>
+    <string name="contact_scopes_summary">Allow app to access limited contacts</string>
 </resources>
