--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -217,4 +217,10 @@
     <string name="battery_charge_cycles_title">Charge cycles</string>
     <string name="battery_charge_cycles_summary">This is the number of times the battery has been charged. It is a measure of how long the battery has been in use.</string>
     <string name="keywords_battery_health">battery, health, charge, cycles, capacity</string>
+
+    <!-- Hide developer status -->
+    <string name="hide_developer_status_title">Shielded apps</string>
+    <string name="hide_developer_status_summary">Deny apps to access developer options</string>
+    <string name="search">Search</string>
+    <string name="search_apps">@string/search</string>
 </resources>
