Settings: Wi-Fi timeout feature (2/2)
Change-Id: I9540f26d9c939fdfc908f4573fa73a13dfb58fb9
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -311,4 +311,9 @@
     <string name="bluetooth_timeout">Turn off Bluetooth automatically</string>
     <string name="bluetooth_timeout_summary">Never</string>
     <string name="bluetooth_timeout_summary_auto"><xliff:g id="timeout_description">%1$s</xliff:g></string>
+
+    <!-- Wi-Fi auto timeout -->
+    <string name="wifi_timeout">Turn off Wi-Fi automatically</string>
+    <string name="wifi_timeout_summary">Never</string>
+    <string name="wifi_timeout_summary_auto"><xliff:g id="timeout_description">%1$s</xliff:g></string>
 </resources>
