--- a/res/values/extra_arrays.xml
+++ b/res/values/extra_arrays.xml
@@ -148,7 +148,7 @@
         <item>space;space;left,back,home,recent,right</item>
     </string-array>
 
-    <!-- Custom timeout for Bluetooth -->
+    <!-- Custom timeout for Wi-Fi/Bluetooth -->
     <string-array name="custom_timeout_entries">
         <item>@string/custom_timeout_summary_never</item>
         <item>@string/custom_timeout_summary_1min</item>
