--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -75,6 +75,12 @@
             android:summary="@string/use_tiles_on_secure_keyguard_summary"
             android:defaultValue="true" />
 
+        <lineageos.preference.SystemSettingSwitchPreference
+            android:key="use_power_menu_on_secure_keyguard"
+            android:title="@string/use_power_menu_on_secure_keyguard_title"
+            android:summary="@string/use_power_menu_on_secure_keyguard_summary"
+            android:defaultValue="true" />
+
         <Preference
             android:key="customizable_lock_screen_quick_affordances"
             android:title="@string/lockscreen_quick_affordances_title"
