--- a/res/xml/two_button_navigation_settings.xml
+++ b/res/xml/two_button_navigation_settings.xml
@@ -43,6 +43,14 @@
         android:summary="@string/navigation_bar_invert_layout_summary"
         android:defaultValue="false"/>
 
+    <lineageos.preference.extra.SecureSettingListPreference
+        android:key="navbar_layout_views"
+        android:title="@string/navbar_layout_title"
+        android:summary="%s"
+        android:entries="@array/navbar_layout_entries"
+        android:entryValues="@array/navbar_layout_values"
+        android:defaultValue="default" />
+
     <ListPreference
         android:key="navigation_back_long_press"
         android:dialogTitle="@string/navigation_bar_back_long_press_title"
