Settings: Add lock down option on power menu settings * Cherry-picked from https://github.com/crdroidandroid/android_packages_apps_crDroidSettings/commit/8d1162668fa6cba9dc6faec51805c68b8d45e7b4
Change-Id: Ied98218bfd2e4134f92ec46c1aaad539e2c5aac3
Signed-off-by: Praditia Nur <pnplusplus@gmail.com>

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -72,6 +72,7 @@
     <string name="power_menu_advanced_restart_title">Advanced restart</string>
     <string name="power_menu_advanced_restart_summary">When unlocked, include options in the power menu for restarting into recovery or bootloader</string>
     <string name="power_menu_emergency_affordance_enabled">Emergency affordance is enabled</string>
+    <string name="power_menu_lockdown_title">Lock down</string>
 
     <!-- Calling button accessibility-->
     <string name="home_answer_call_title">Home button answer call</string>
