Allow adding space below IME on disabling navigation hint [2/3] * [pnplusplus]: - Enabled it by default - Handle taskbar avaibility - Also handle visibility for switch it self
Change-Id: I0a53a91643018f5579246684ba2ccba08a9e3bb6
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -284,4 +284,8 @@
     <!-- Parallel space -->
     <string name="laboratory_parallel_space_title">Parallel Space</string>
     <string name="laboratory_parallel_space_summary">Allow running multiple instances of the same application in parallel</string>
+
+    <!-- Keyboard hint -->
+    <string name="navigation_bar_ime_space_title">Show navigation button</string>
+    <string name="navigation_bar_ime_space_summary">For keyboard</string>
 </resources>
