--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -132,14 +132,14 @@
             android:fragment="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionSettings"
             settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionPreferenceController"/>
 
-        <!-- Lineage version -->
+        <!-- Kusuma extra version -->
         <Preference
-            android:key="lineage_os_version"
+            android:key="extra_version"
             android:order="43"
-            android:title="@*lineageos.platform:string/lineage_version"
+            android:title="@string/extra_version_title"
             android:summary="@string/summary_placeholder"
-            settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVersionDetailPreferenceController"/>
+            android:fragment="com.android.settings.deviceinfo.firmwareversion.ExtraVersionSettings"
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.ExtraVersionPreferenceController"/>
     </PreferenceCategory>
 
     <PreferenceCategory
