fixup! Settings: Adapt device info entries to Kusuma versioning
Change-Id: I6cd4dbcd590c89e4151429a3d3c44a2e4ac87fff

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -19,4 +19,5 @@
     <string name="extra_version_title">Kusuma version</string>
     <string name="extra_number_title">Kusuma number</string>
     <string name="extra_codename_title">Kusuma codename</string>
+    <string name="base_lineage_version_title">Base LineageOS version</string>
 </resources>
