--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -47,6 +47,12 @@
         settings:controller="com.android.settings.gestures.SwipeToNotificationPreferenceController" />
 
     <Preference
+        android:key="gesture_quick_pulldown_summary"
+        android:title="@string/status_bar_quick_qs_pulldown_title"
+        android:summary="@string/status_bar_quick_qs_pulldown_summary"
+        android:fragment="com.android.settings.gestures.QuickPullDownSettings" />
+
+    <Preference
         android:key="gesture_double_tap_power_input_summary"
         android:title="@string/double_tap_power_for_camera_title"
         android:fragment="com.android.settings.gestures.DoubleTapPowerSettings"
