Settings: Import long press for torch from LineageParts * And make it settings page
Change-Id: Ic270ab6e0b1aaf00e996bd490e04d21fdde40224

--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -118,4 +118,10 @@
         android:title="@string/gesture_prevent_ringing_screen_title"
         android:fragment="com.android.settings.gestures.PreventRingingGestureSettings"
         settings:controller="com.android.settings.gestures.PreventRingingParentPreferenceController" />
+
+    <Preference
+        android:key="gesture_quick_pulldown_summary"
+        android:title="@string/torch_long_press_power_gesture_title"
+        android:fragment="com.android.settings.gestures.QuickTorchSettings" 
+        settings:controller="com.android.settings.gestures.QuickTorchPreferenceController" />
 </PreferenceScreen>
