--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -50,7 +50,8 @@
         android:key="gesture_quick_pulldown_summary"
         android:title="@string/status_bar_quick_qs_pulldown_title"
         android:summary="@string/status_bar_quick_qs_pulldown_summary"
-        android:fragment="com.android.settings.gestures.QuickPullDownSettings" />
+        android:fragment="com.android.settings.gestures.QuickPulldownSettings" 
+        settings:controller="com.android.settings.gestures.QuickPulldownPreferenceController" />
 
     <Preference
         android:key="gesture_double_tap_power_input_summary"
