Settings: Import control playback from LineageParts * And make it settings page
Change-Id: Iab281fef5551aaf0bea8eb1b5d85e74bea013b43

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -43,4 +43,8 @@
     <string name="torch_long_press_power_timeout_2min">2 minutes</string>
     <string name="torch_long_press_power_timeout_5min">5 minutes</string>
     <string name="torch_long_press_power_timeout_10min">10 minutes</string>
+
+    <!-- Playback control -->
+    <string name="volbtn_music_controls_title">Control playback</string>
+    <string name="volbtn_music_controls_summary">Seek music tracks by long pressing the volume keys while the display is off</string>
 </resources>
