--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -121,6 +121,12 @@
         settings:controller="com.android.settings.gestures.PreventRingingParentPreferenceController" />
 
     <Preference
+        android:key="playback_control_summary"
+        android:title="@string/volbtn_music_controls_title"
+        android:fragment="com.android.settings.gestures.PlaybackControlSettings" 
+        settings:controller="com.android.settings.gestures.PlaybackControlPreferenceController" />
+
+    <Preference
         android:key="gesture_quick_torch_summary"
         android:title="@string/torch_long_press_power_gesture_title"
         android:fragment="com.android.settings.gestures.QuickTorchSettings" 
