--- a/res/xml/quick_torch_settings.xml
+++ b/res/xml/quick_torch_settings.xml
@@ -29,7 +29,7 @@
             android:defaultValue="false"
             lineage:requiresConfig="@*android:bool/config_supportLongPressPowerWhenNonInteractive" />
 
-        <ListPreference
+        <lineageos.preference.LineageSystemSettingListPreference
             android:key="torch_long_press_power_timeout"
             android:dialogTitle="@string/torch_long_press_power_timeout_title"
             android:title="@string/torch_long_press_power_timeout_title"
