Settings: Import partial screenshot from LineageParts * And make it settings page
Change-Id: I9ae2330627f29256fa365c1fe73334c8d4eb9f7d

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -47,4 +47,8 @@
     <!-- Playback control -->
     <string name="volbtn_music_controls_title">Control playback</string>
     <string name="volbtn_music_controls_summary">Seek music tracks by long pressing the volume keys while the display is off</string>
+
+    <!-- Partial screenshot -->
+    <string name="click_partial_screenshot_title">Partial screenshot</string>
+    <string name="click_partial_screenshot_summary">Short click Volume Down and Power to take partial screenshot</string>
 </resources>
