--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -131,4 +131,10 @@
         android:title="@string/torch_long_press_power_gesture_title"
         android:fragment="com.android.settings.gestures.QuickTorchSettings" 
         settings:controller="com.android.settings.gestures.QuickTorchPreferenceController" />
+
+    <Preference
+        android:key="partial_screenshot_summary"
+        android:title="@string/click_partial_screenshot_title"
+        android:fragment="com.android.settings.gestures.PartialScreenshotSettings" 
+        settings:controller="com.android.settings.gestures.PartialScreenshotPreferenceController" />
 </PreferenceScreen>
