--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -22,6 +22,7 @@
     <string name="base_lineage_version_title">Base LineageOS version</string>
 
     <!-- Status bar icons -->
+    <string name="category_name_status_bar_display">Status bar</string>
     <string name="status_bar_system_icons_title">System icons</string>
     <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
 
