--- a/res/xml/playback_control_settings.xml
+++ b/res/xml/playback_control_settings.xml
@@ -22,12 +22,10 @@
     android:key="playback_control_screen"
     android:title="@string/volbtn_music_controls_title">
 
-        <ListPreference
-            android:key="volume_key_cursor_control"
-            android:dialogTitle="@string/volbtn_cursor_control_title"
-            android:title="@string/volbtn_cursor_control_title"
-            android:entries="@array/volbtn_cursor_control_entries"
-            android:entryValues="@array/volbtn_cursor_control_values"
-            android:persistent="false" />
+        <lineageos.preference.LineageSystemSettingSwitchPreference
+            android:key="volbtn_music_controls"
+            android:title="@string/volbtn_music_controls_title"
+            android:summary="@string/volbtn_music_controls_summary"
+            android:defaultValue="true" />
 
 </PreferenceScreen>
