--- a/res/xml/quick_torch_settings.xml
+++ b/res/xml/quick_torch_settings.xml
@@ -18,7 +18,7 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:lineage="http://schemas.android.com/apk/res-auto"
     android:key="quick_torch_screen"
     android:title="@string/torch_long_press_power_gesture_title">
 
