--- a/res/xml/quick_torch_settings.xml
+++ b/res/xml/quick_torch_settings.xml
@@ -29,13 +29,15 @@
             android:defaultValue="false"
             lineage:requiresConfig="@*android:bool/config_supportLongPressPowerWhenNonInteractive" />
 
-        <lineageos.preference.LineageSystemSettingListPreference
+        <lineageos.preference.extra.LineageSystemSettingListPreference
             android:key="torch_long_press_power_timeout"
             android:dialogTitle="@string/torch_long_press_power_timeout_title"
             android:title="@string/torch_long_press_power_timeout_title"
+            android:summary="%s"
             android:entries="@array/torch_long_press_power_timeout_entries"
             android:entryValues="@array/torch_long_press_power_timeout_values"
             android:dependency="torch_long_press_power_gesture"
+            android:defaultValue="0"
             android:persistent="false" />
 
 </PreferenceScreen>
