Settings: Import global actions from LineageParts
Change-Id: I71bf2eea5d3b044acfe61f9a7f8501a96708ce72

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -68,6 +68,15 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:title="@string/category_name_global_actions_display">
+
+        <Preference
+            android:key="power_menu"
+            android:title="@string/power_menu_title"
+            android:fragment="com.android.settings.display.PowerMenuActions" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:title="@string/category_name_appearance">
 
         <com.android.settings.display.darkmode.DarkModePreference
