Settings: Import answer call button from LineageParts
Change-Id: I3f492236c16c467b8ddfd78e95c8160f8c0e43a6

--- a/res/xml/accessibility_system_controls.xml
+++ b/res/xml/accessibility_system_controls.xml
@@ -42,6 +42,17 @@
         android:title="@string/accessibility_power_button_ends_call_prerefence_title"
         settings:controller="com.android.settings.accessibility.PowerButtonEndsCallPreferenceController"/>
 
+    <lineageos.preference.LineageSystemSettingSwitchPreference
+        android:key="volume_answer_call"
+        android:title="@string/volume_answer_call_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="home_answer_call"
+        android:title="@string/home_answer_call_title"
+        android:persistent="false"
+        settings:controller="com.android.settings.accessibility.HomeAnswerCallPreferenceController"/>
+
     <!-- Standard auto-rotation preference that will be shown when device state based auto-rotation
          settings are NOT available. -->
     <SwitchPreference
