--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -73,4 +73,22 @@
     <!-- Calling button accessibility-->
     <string name="home_answer_call_title">Home button answer call</string>
     <string name="volume_answer_call_title">Volume button answer call</string>
+
+    <!-- Navigation bar -->
+    <string name="navigation_bar_back_long_press_title">Back long press action</string>
+    <string name="navigation_bar_home_long_press_title">Home long press action</string>
+    <string name="navigation_bar_home_double_tap_title">Home double tap action</string>
+
+    <!-- Hardware key rebinding -->
+    <string name="hardware_keys_action_nothing">No action</string>
+    <string name="hardware_keys_action_menu">Open/close menu</string>
+    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
+    <string name="hardware_keys_action_search">Search assistant</string>
+    <string name="hardware_keys_action_voice_search">Voice search</string>
+    <string name="hardware_keys_action_in_app_search">In-app search</string>
+    <string name="hardware_keys_action_launch_camera">Launch camera</string>
+    <string name="hardware_keys_action_sleep">Turn screen off</string>
+    <string name="hardware_keys_action_last_app">Last app</string>
+    <string name="hardware_keys_action_split_screen">Split screen</string>
+    <string name="hardware_keys_action_kill_app">Kill foreground app</string>
 </resources>
