--- a/res/xml/two_button_navigation_settings.xml
+++ b/res/xml/two_button_navigation_settings.xml
@@ -34,8 +34,37 @@
         android:key="assistant_long_press_home_gesture"
         android:title="@string/assistant_long_press_home_gesture_title"
         android:summary="@string/assistant_long_press_home_gesture_summary"
-        settings:controller="com.android.settings.gestures.ButtonNavigationSettingsAssistController"
-    />
+        settings:controller="com.android.settings.gestures.ButtonNavigationSettingsAssistController"/>
+
+    <lineageos.preference.SecureSettingSwitchPreference
+        android:key="sysui_nav_bar_inverse"
+        android:title="@string/navigation_bar_invert_layout_title"
+        android:summary="@string/navigation_bar_invert_layout_summary"
+        android:defaultValue="false"/>
+
+    <ListPreference
+        android:key="navigation_back_long_press"
+        android:dialogTitle="@string/navigation_bar_back_long_press_title"
+        android:title="@string/navigation_bar_back_long_press_title"
+        android:entries="@array/hardware_keys_action_entries"
+        android:entryValues="@array/hardware_keys_action_values"
+        android:persistent="false" />
+
+    <ListPreference
+        android:key="navigation_home_long_press"
+        android:dialogTitle="@string/navigation_bar_home_long_press_title"
+        android:title="@string/navigation_bar_home_long_press_title"
+        android:entries="@array/hardware_keys_action_entries"
+        android:entryValues="@array/hardware_keys_action_values"
+        android:persistent="false" />
+
+    <ListPreference
+        android:key="navigation_home_double_tap"
+        android:dialogTitle="@string/navigation_bar_home_double_tap_title"
+        android:title="@string/navigation_bar_home_double_tap_title"
+        android:entries="@array/hardware_keys_action_entries"
+        android:entryValues="@array/hardware_keys_action_values"
+        android:persistent="false" />
 
 </PreferenceScreen>
 
