Settings: Import gesture navigation settings from LineageParts
Change-Id: Ic6228d81362b3b612158a7ad2bd99eb78d7ed23c

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -97,4 +97,7 @@
 
     <!-- Taskbar -->
     <string name="navigation_bar_enable_taskbar_title">Enable taskbar</string>
+
+    <!-- Gesture navigation -->
+    <string name="navigation_bar_edge_long_swipe_title">Edge long swipe action</string>
 </resources>
