--- a/res/xml/camera_button.xml
+++ b/res/xml/camera_button.xml
@@ -19,15 +19,18 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:key="quick_pulldown_screen"
-    android:title="@string/status_bar_quick_qs_pulldown_title">
+    android:title="@string/hardware_keys_camera_key_title">
 
-    <lineageos.preference.LineageSystemSettingListPreference
-        android:key="qs_quick_pulldown"
-        android:title="@string/status_bar_quick_qs_pulldown_title"
-        android:summary="%s"
-        android:entries="@array/status_bar_quick_qs_pulldown_entries"
-        android:entryValues="@array/status_bar_quick_qs_pulldown_values"
-        android:defaultValue="0" />
+    <lineageos.preference.LineageSystemSettingSwitchPreference
+        android:key="camera_sleep_on_release"
+        android:title="@string/camera_sleep_on_release_title"
+        android:summary="@string/camera_sleep_on_release_summary"
+        android:defaultValue="false" />
+
+    <lineageos.preference.LineageSystemSettingSwitchPreference
+        android:key="camera_launch"
+        android:title="@string/camera_launch_title"
+        android:summary="@string/camera_launch_summary"
+        android:defaultValue="false" />
 
 </PreferenceScreen>
