--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -73,6 +73,7 @@
         <Preference
             android:key="power_menu"
             android:title="@string/power_menu_title"
+            android:summary="@string/power_menu_summary"
             android:fragment="com.android.settings.display.PowerMenuActions" />
     </PreferenceCategory>
 
