--- a/res/xml/global_actions_settings.xml
+++ b/res/xml/global_actions_settings.xml
@@ -6,42 +6,47 @@
 -->
 
 <PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android">
+	    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <lineageos.preference.LineageSecureSettingSwitchPreference
-        android:key="advanced_reboot"
-        android:title="@string/power_menu_advanced_restart_title"
-        android:summary="@string/power_menu_advanced_restart_summary"
-        android:defaultValue="false" />
-
-    <CheckBoxPreference
-        android:key="screenshot"
-        android:title="@string/power_menu_screenshot_title"
-        android:summary="@string/power_menu_screenshot_summary"
-        android:defaultValue="false" />
-
-    <CheckBoxPreference
-        android:key="airplane"
-        android:title="@string/power_menu_airplane_title"
-        android:defaultValue="false" />
-
-    <CheckBoxPreference
-        android:key="users"
-        android:title="@string/power_menu_users_title"
-        android:defaultValue="false" />
-
-    <CheckBoxPreference
-        android:key="bugreport"
-        android:title="@string/power_menu_bug_report_title"
-        android:defaultValue="false" />
-
-    <CheckBoxPreference
+    <SwitchPreference
         android:key="emergency"
+        android:icon="@drawable/ic_lock_emergency_star"
         android:title="@string/power_menu_emergency_title"
         android:defaultValue="false" />
 
-    <CheckBoxPreference
+    <lineageos.preference.LineageSecureSettingSwitchPreference
+        android:key="advanced_reboot"
+        android:icon="@drawable/ic_lock_restart"
+        android:title="@string/power_menu_advanced_restart_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="screenshot"
+        android:icon="@drawable/ic_lock_screenshot"
+        android:title="@string/power_menu_screenshot_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="airplane"
+        android:icon="@drawable/ic_lock_airplane_mode"
+        android:title="@string/power_menu_airplane_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="users"
+        android:icon="@drawable/ic_lock_user"
+        android:title="@string/power_menu_users_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="bugreport"
+        android:icon="@drawable/ic_lock_bugreport"
+        android:title="@string/power_menu_bug_report_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
         android:key="devicecontrols"
+        android:icon="@drawable/ic_lock_controls"
         android:title="@string/power_menu_devicecontrols_title"
         android:defaultValue="false"
         android:enabled="false" />
