--- a/res/xml/system_dashboard_fragment.xml
+++ b/res/xml/system_dashboard_fragment.xml
@@ -72,4 +72,23 @@
         android:order="-30"
         android:fragment="com.android.settings.system.ResetDashboardFragment"
         settings:controller="com.android.settings.system.ResetPreferenceController"/>
+
+    <lineageos.preference.SelfRemovingPreference
+        android:key="camera_button_settings"
+        android:title="@string/hardware_keys_camera_key_title"
+        android:icon="@drawable/ic_settings_camera_button"
+        android:order="-29"
+        android:fragment="com.android.settings.gestures.CameraButtonSettings"
+        settings:requiresConfig="@*lineageos.platform:integer/config_deviceHardwareKeys"
+        settings:requiresConfigMask="32" />
+
+    <lineageos.preference.RemotePreference
+        android:key="additional_buttons"
+        android:title="@string/additional_buttons_title"
+        android:icon="@drawable/ic_settings_additional_buttons"
+        android:order="-28"
+        settings:requiresAction="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS">
+        <intent
+            android:action="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS" />
+    </lineageos.preference.RemotePreference>
 </PreferenceScreen>
