--- a/res/xml/quick_pulldown_settings.xml
+++ b/res/xml/quick_pulldown_settings.xml
@@ -18,16 +18,17 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:key="quick_pulldown_screen"
     android:title="@string/status_bar_quick_qs_pulldown_title">
 
-    <lineageos.preference.LineageSystemSettingListPreference
-        android:key="qs_quick_pulldown"
-        android:title="@string/status_bar_quick_qs_pulldown_title"
-        android:summary="%s"
-        android:entries="@array/status_bar_quick_qs_pulldown_entries"
-        android:entryValues="@array/status_bar_quick_qs_pulldown_values"
-        android:defaultValue="0" />
+    <PreferenceCategory
+        android:key="quick_pulldown_category"
+        android:title="@string/quick_pulldown_category_title" />
 
+    <com.android.settingslib.widget.FooterPreference
+        android:key="quick_pulldown_hint"
+        android:title="@string/quick_pulldown_hint_title"
+        android:selectable="false"
+        settings:searchable="false" />
 </PreferenceScreen>
