--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -28,12 +28,14 @@
 
     <!-- Quick pulldown -->
     <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
-    <string name="status_bar_quick_qs_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
+    <string name="quick_pulldown_category_title">Quickly access Quick Settings with swipe down status bar from</string>
+    <string name="quick_pulldown_hint_title">Swipe down status bar with two finger will always quickly access Quick Settings</string>
+    <string name="status_bar_quick_qs_pulldown_summary">%1$s edge</string>
     <string name="status_bar_quick_qs_pulldown_summary_left">Left</string>
     <string name="status_bar_quick_qs_pulldown_summary_right">Right</string>
-    <string name="status_bar_quick_qs_pulldown_off">Off</string>
-    <string name="status_bar_quick_qs_pulldown_left">Left</string>
-    <string name="status_bar_quick_qs_pulldown_right">Right</string>
+    <string name="status_bar_quick_qs_pulldown_off">None</string>
+    <string name="status_bar_quick_qs_pulldown_left">Left edge</string>
+    <string name="status_bar_quick_qs_pulldown_right">Right edge</string>
 
     <!-- Quick torch -->
     <string name="torch_long_press_power_gesture_title">Long press for torch</string>
