--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -40,7 +40,7 @@
     <!-- Quick torch -->
     <string name="torch_long_press_power_gesture_title">Quick torch</string>
     <string name="torch_long_press_power_gesture_desc">To quickly flash the camera light when screen is off, long press the power button</string>
-    <string name="torch_long_press_power_timeout_title">Torch timeout</string>
+    <string name="torch_long_press_power_timeout_title">Turn off torch automatically</string>
     <string name="torch_long_press_power_timeout_never">Never</string>
     <string name="torch_long_press_power_timeout_1min">1 minute</string>
     <string name="torch_long_press_power_timeout_2min">2 minutes</string>
@@ -54,7 +54,7 @@
 
     <!-- Partial screenshot -->
     <string name="click_partial_screenshot_title">Partial screenshot</string>
-    <string name="click_partial_screenshot_summary">Short click Volume Down and Power to take partial screenshot</string>
+    <string name="click_partial_screenshot_summary">Press Power &amp; Volume Down together to take partial screenshot</string>
 
     <!-- Power menu -->
     <string name="category_name_global_actions_display">Global actions</string>
@@ -87,8 +87,8 @@
     <string name="app_switch_button_wake_title">Recents button wake device</string>
 
     <!-- Navigation bar -->
-    <string name="navigation_bar_invert_layout_title">Alternative order</string>
-    <string name="navigation_bar_invert_layout_summary">Use alternative button navigation order</string>
+    <string name="navigation_bar_invert_layout_title">Order inversion</string>
+    <string name="navigation_bar_invert_layout_summary">Show navigation icons in reverse order</string>
     <string name="navigation_bar_back_long_press_title">Back long press action</string>
     <string name="navigation_bar_home_long_press_title">Home long press action</string>
     <string name="navigation_bar_home_double_tap_title">Home double tap action</string>
@@ -158,25 +158,25 @@
 
     <!-- Three-fingers-swipe to screenshot -->
     <string name="three_finger_gesture">Swipe to screenshot</string>
-    <string name="three_finger_gesture_summary">Swipe down with three fingers to take a screenshot</string>
+    <string name="three_finger_gesture_summary">Swipe down with three fingers to take screenshot</string>
 
     <!-- Screenshot shutter -->
     <string name="screenshot_shutter_sound_title">Screenshot sound</string>
 
     <!-- Hotspot client manager -->
     <string name="wifi_hotspot_hidden_ssid_title">Hidden network</string>
-    <string name="wifi_hotspot_hidden_ssid_summary">Your hotspot\'s name won\'t appear in the list of available WLAN networks</string>
-    <string name="wifi_hotspot_client_manager_title">Connected devices</string>
-    <string name="wifi_hotspot_client_manager_summary">List and manage devices connected to the hotspot</string>
+    <string name="wifi_hotspot_hidden_ssid_summary">Don\'t broadcast the network ID to other devices</string>
+    <string name="wifi_hotspot_client_manager_title">Manage devices</string>
+    <string name="wifi_hotspot_client_manager_summary">See all devices connected to the hotspot</string>
     <string name="wifi_hotspot_client_manager_list_only_summary">List devices connected to the hotspot</string>
-    <string name="wifi_hotspot_client_limit_title">Limit of connected devices</string>
+    <string name="wifi_hotspot_client_limit_title">Devices limit</string>
     <string name="wifi_hotspot_blocked_clients_list_title">Blocked devices</string>
-    <string name="wifi_hotspot_connected_clients_list_title">Connected devices</string>
+    <string name="wifi_hotspot_connected_clients_list_title">Allowed devices</string>
     <string name="wifi_hotspot_block_client_dialog_title">Block device</string>
-    <string name="wifi_hotspot_block_client_dialog_text">This action will disconnect \"<xliff:g id="device_name">%1$s</xliff:g>\" from this device and add it to blocklist</string>
-    <string name="wifi_hotspot_unblock_client_dialog_title">Unblock device</string>
-    <string name="wifi_hotspot_unblock_client_dialog_text">The device \"<xliff:g id="device_name">%1$s</xliff:g>\" will be able to connect to this hotspot</string>
-    <string name="wifi_hotspot_client_manager_footer_text">No clients are currently available. Connected and blocked devices will be listed here when available.</string>
+    <string name="wifi_hotspot_block_client_dialog_text">Disconnect \"<xliff:g id="device_name">%1$s</xliff:g>\" from the hotspot and add it to blocked devices?</string>
+    <string name="wifi_hotspot_unblock_client_dialog_title">Allow device</string>
+    <string name="wifi_hotspot_unblock_client_dialog_text">Allow \"<xliff:g id="device_name">%1$s</xliff:g>\" to connect to the hotspot?</string>
+    <string name="wifi_hotspot_client_manager_footer_text">No devices are currently connected to the hotspot</string>
     <string name="wifi_hotspot_auto_off_timeout_never">Never turn off hotspot</string>
     <string name="custom_timeout_summary_never">Never</string>
     <string name="custom_timeout_summary_1min">1 minute</string>
@@ -261,7 +261,7 @@
     <string name="use_tiles_on_secure_keyguard_summary">Access sensitive Quick Settings tiles without unlocking your phone or tablet</string>
 
     <!-- Power menu on secure keyguard -->
-    <string name="use_power_menu_on_secure_keyguard_title">Access power menu from locked screen</string>
+    <string name="use_power_menu_on_secure_keyguard_title">Access global actions from locked screen</string>
     <string name="use_power_menu_on_secure_keyguard_summary">Access power off and restart actions without unlocking your phone or tablet</string>
 
     <!-- Ambient display gestures-->
