Settings: Allow disabling screenshot overlay [2/2]
Change-Id: I9a324825f0022269528b1bdec21bc188915b27e8

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -299,4 +299,8 @@
     <!-- Show clipboard overlay -->
     <string name="show_clipboard_overlay_title">Show clipboard preview</string>
     <string name="show_clipboard_overlay_summary">Show a preview when content is copied to the clipboard</string>
+
+    <!-- Show screenshot overlay -->
+    <string name="show_screenshot_overlay_title">Show screenshot preview</string>
+    <string name="show_screenshot_overlay_summary">Show a preview when screenshot is taken</string>
 </resources>
