Settings: Switch non-selectable build number to build desc * Using our extra build desc prop
Change-Id: I888e9d0ea5e07d1fdf760f609ec0b44d0d8f6e9b

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -303,4 +303,7 @@
     <!-- Show screenshot overlay -->
     <string name="show_screenshot_overlay_title">Show screenshot preview</string>
     <string name="show_screenshot_overlay_summary">Show a preview when screenshot is taken</string>
+
+    <!-- About phone -->
+    <string name="build_description">Description</string>
 </resources>
