--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -225,13 +225,13 @@
 
         <!-- Build number -->
         <Preference
-            android:key="os_build_number"
+            android:key="build_description"
             android:order="53"
-            android:title="@string/build_number"
+            android:title="@string/build_description"
             android:summary="@string/summary_placeholder"
             android:selectable="false"
             settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.firmwareversion.SimpleBuildNumberPreferenceController"/>
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.BuildDescriptionPreferenceController"/>
 
     </PreferenceCategory>
 
