Settings: Move deep sleep controller into battery manager page
Change-Id: I72f93dd8ca57cf1b2a0e420ce7e362ee1df81711

--- a/res/values-in/extra_strings.xml
+++ b/res/values-in/extra_strings.xml
@@ -54,7 +54,7 @@
     <string name="app_volume_summary">Setel tingkat volume untuk setiap aplikasi</string>
 
     <!-- Deep Sleep percentage in device info -->
-    <string name="status_sleep_time">Tidur lelap</string>
+    <string name="status_sleep_time">Persentase tidur</string>
 
     <!-- Battery optimization -->
     <string name="high_power_apps_summary">Kontrol penggunaan baterai setiap aplikasi</string>
